updated project section

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             
                 <li>
                   <p href><em>
-                    Project link for user: <a href="https://adonsworld.herokuapp.com/"  target="_blank">https://adonsworld.herokuapp.com/ </a> </em></p>
+                    Project link for user: <a href="https://adonsworld.herokuapp.com"  target="_blank">https://adonsworld.herokuapp.com </a> </em></p>
                 </li>
                 <li>
                   <p><em>
