canteen and explore kerala project added but Detail part is pending

--- a/index.html
+++ b/index.html
@@ -327,15 +327,43 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-
+           
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Projects/canteen/cover.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>CANTEEN</h4>
+                <!-- <p>User Section</p> -->
+                <div class="portfolio-links">
+                  <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                    <a href="canteen-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Projects/explore-kerala/cover.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>EXPLORE  KERALA</h4>
+                <!-- <p>User Section</p> -->
+                <div class="portfolio-links">
+                  <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                    <a href="explore-keraala-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Projects/adons-world/cover.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ADON'S WORLD</h4>
-                <p>User Section</p>
+                <!-- <p>User Section</p> -->
                 <div class="portfolio-links">
                   <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
                     title="Portfolio Details"><i class="bx bx-link"></i></a> -->
@@ -345,21 +373,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>ADON'S WORLD</h4>
-                <p>Admin Panel</p>
-                <div class="portfolio-links">
-                  <!-- <a href=" https://adonsworld.herokuapp.com/admin" data-vbtype="iframe" class="venobox"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                    <a href="adonsworld-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
+          
 
 
 
