--- a/adonsworld-details.html
+++ b/adonsworld-details.html
@@ -50,19 +50,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/image4.jpg" alt="">
+                  <img src="assets/img/Projects/adons-world/image1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/image1.jpg" alt="">
+                  <img src="assets/img/Projects/adons-world/image2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/image2.jpg" alt="">
+                  <img src="assets/img/Projects/adons-world/image3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/image3.jpg" alt="">
+                  <img src="assets/img/Projects/adons-world/image4.jpg" alt="">
                 </div>
 
               </div>
@@ -75,7 +75,7 @@
               <h3>ADON'S WORLD</h3>
               <ul>
                 <li><strong>Category</strong>:  Ecommerce Web application</li>
-                <li><strong>Project link for user</strong>: <a href=" https://adonsworld.herokuapp.com"  target="_blank"> https://adonsworld.herokuapp.com</a></li>
+                <li><strong>Project link for user</strong>: <a href=" https://adonsworld.herokuapp.com/"  target="_blank"> https://adonsworld.herokuapp.com/</a></li>
                 <li><strong>Project link for admin</strong>: <a href="https://adonsworld.herokuapp.com/admin" target="_blank">https://adonsworld.herokuapp.com/admin</a></li>
                 <li><strong>Github Repository</strong>: <a href="https://github.com/adonbiju/adonsworld.git"  target="_blank">https://github.com/adonbiju/adonsworld.git</a></li>
               </ul>
@@ -83,7 +83,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                ADON'S WORLD is a Dynamic Ecommerce Web application established usingNode.js, Express.js ,MongoDB,Hbs(Handlebars) and it also deals with razorpay test mode payment gateway integration.
+                ADON'S WORLD is a Dynamic Ecommerce Web application established using Hbs(Handlebars),Node.js, Express.js ,MongoDB, and it also deals with razorpay test mode payment gateway integration.
               </p>
             </div>
           </div>
