--- a/explore-keraala-details.html
+++ b/explore-keraala-details.html
@@ -89,9 +89,7 @@
         <!-- -------------------------------------------------------------------------------------------------------- -->
 
 
-
-        <!-- <div class="row gy-4">
-
+      <div class="row gy-4">
           <div class="col-lg-12">
             <div class="portfolio-info">
               <h3>Technologies used</h3>
@@ -100,7 +98,7 @@
                 <li><strong>Node.js</strong></li>
                 <li><strong>Express.js</strong></li>
                 <li><strong>MongoDB</strong></li>
-                <li><strong>Razorpay API </strong></li>
+                <li><strong>Twilio API </strong></li>
               </ul>
             </div>
           </div>
@@ -108,15 +106,15 @@
             <div class="portfolio-info">
               <h3>Features on user side</h3>
               <ul style="list-style-type:circle">
-                <li><strong>User registration and login</strong></li>
-                <li><strong>Cart Management</strong></li>
-                <li><strong>User Profile</strong></li>
-                <li><strong>User Password management</strong></li>
-                <li><strong>Address Management</strong></li>
-                <li><strong>Order History </strong></li>
-                <li><strong>Product Review </strong></li>
-                <li><strong>Payment Methods :- Cash on Delivery and razorpay payment</strong></li>
-                <li><strong>Related Items :- where user can see the related products of the same category. </strong></li>
+                <li><strong>User Registration :- where user can create an account.</strong></li>
+                <li><strong>User Login :- It also Provides login authentication with phone number where OTP verification has been send as phone call or text SMS.</strong></li>
+                <li><strong>User Profile :- where user can update the details of him/her.</strong></li>
+                <li><strong>User Password management :- where user can change the password.</strong></li>
+                <li><strong>Write Blog :- where user can write blog regarding the place he/she visited in kerala.</strong></li>
+                <li><strong>My Blogs :- where user can update and delete the blogs written by him. </strong></li>
+                <li><strong>Destinations Page :- where user can see all the destinations. </strong></li>
+                <li><strong>Detailed Blog Page :- where user can see the detail of particular place and also other user can write commentts regarding that place.</strong></li>
+                
               </ul>
             </div>
           </div>
@@ -124,13 +122,11 @@
             <div class="portfolio-info">
               <h3>Features on admin side</h3>
               <ul style="list-style-type:circle">
-                <li><strong>login</strong></li>
-                <li><strong>Dashboard</strong></li>
-                <li><strong>Add Product :- where admin can add the product details</strong></li>
-                <li><strong>All product :- where admin can edit or delete the product</strong></li>
-                <li><strong>User Manager:- Block or Unblock user </strong></li>
-                <li><strong>Order Manager :- where admin can manage the status of the order </strong></li>
-                <li><strong>Sales Report </strong></li>
+                <li><strong>login Page</strong></li>
+                <li><strong>Dashboard :- where admin can see total number of users, total number of blogs ,total number of categorys, and all the categorys avilable.</strong></li>
+                <li><strong>Add category :- where admin can add new category,edit category,delete category.</strong></li>
+                <li><strong>User Manager:- where admin can Block or Unblock or Delete user.</strong></li>
+                <li><strong>All Blogs :- where admin can delete the unwanted Blogs.</strong></li>
               </ul>
             </div>
           </div>
@@ -138,16 +134,12 @@
             <div class="portfolio-info">
               <h3>Future Updations :</h3>
               <ul style="list-style-type:circle">
-                <li><strong>Coupon Section</strong></li>
-                <li><strong>Otp login</strong></li>
                 <li><strong>Google Authentication</strong></li>
-                <li><strong>Frequently Asked Questions (FAQ)</strong></li>
-                <li><strong>Recommendation system for the product based on user review </strong></li>
               </ul>
             </div>
           </div>
         
-        </div> -->
+        </div>
 
 
 
