canteen details page updated

--- a/canteen-details.html
+++ b/canteen-details.html
@@ -85,7 +85,7 @@
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
-              <p>
+              <p style=text-align:justify;>
                 CANTEEN is a dynamic Web application which mainly focuses on our canteen (in our college) which digitize most of the work in managing a canteen. It also Provides login authentication with phone number where OTP verification has been send as phone call or text SMS. This Project was established using Hbs(Handlebars), Node.js, Express.js and MongoDB.
               </p>
             </div>
@@ -93,7 +93,7 @@
         </div>
 
 
-<!--         
+        
         <div class="row gy-4">
 
           <div class="col-lg-12">
@@ -105,36 +105,44 @@
                 <li><strong>Express.js</strong></li>
                 <li><strong>MongoDB</strong></li>
                 <li><strong>Razorpay API </strong></li>
+                <li><strong>Twilio API </strong></li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12" style=text-align:justify;>
             <div class="portfolio-info">
               <h3>Features on user side</h3>
               <ul style="list-style-type:circle">
-                <li><strong>User registration and login</strong></li>
-                <li><strong>Cart Management</strong></li>
-                <li><strong>User Profile</strong></li>
-                <li><strong>User Password management</strong></li>
-                <li><strong>Address Management</strong></li>
-                <li><strong>Order History </strong></li>
-                <li><strong>Product Review </strong></li>
-                <li><strong>Payment Methods :- Cash on Delivery and razorpay payment</strong></li>
-                <li><strong>Related Items :- where user can see the related products of the same category. </strong></li>
+                <li><strong>Register: The user has to register to the system with all the necessary details like name, email id, password. If any other account have used this same email id then the user will be asked to change the email address.</strong></li>
+                <li><strong>Login: User have to login with their credentials to access his account. If the email id or password is wrong, a notification showing “invalid email id or password” will be displayed.</strong></li>
+                <li><strong>Login with otp: It also Provides login authentication with phone number where OTP verification will be sent as phone call or text SMS.</strong></li>
+                <li><strong>Profile Settings: The user can update his details in the account and also the user can change his account password.</strong></li>
+                <li><strong>Menu List: It shows various available food in the canteen with respect to different category.</strong></li>
+                <li><strong>Item Details: The user can view the details of the food item that are available and can view the reviews about that particular food item that are written by the users who have already ordered it </strong></li>
+                <li><strong>View Cart: In the cart the user can see the selected food items and can increase or decrease the quantity of the food and also the user can remove any food item from the cart. </strong></li>
+                <li><strong>Payment: User can complete the transaction by doing the payment either by cash on delivery or online transaction.</strong></li>
+                <li><strong>Order History: The user can view the details of all his previous orders </strong></li>
+                <li><strong>View Orders and Status: The user gets notification regarding the order he have placed and the user can cancel the order before he gets the order ready message. </strong></li>
+                <li><strong>Review: The user can write review about any food item if he have already ordered that particular food item. </strong></li>
+                <li><strong>Search: user can find food item by using the search bar. </strong></li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12" style=text-align:justify;>
             <div class="portfolio-info">
               <h3>Features on admin side</h3>
               <ul style="list-style-type:circle">
-                <li><strong>login</strong></li>
-                <li><strong>Dashboard</strong></li>
-                <li><strong>Add Product :- where admin can add the product details</strong></li>
-                <li><strong>All product :- where admin can edit or delete the product</strong></li>
-                <li><strong>User Manager:- Block or Unblock user </strong></li>
-                <li><strong>Order Manager :- where admin can manage the status of the order </strong></li>
-                <li><strong>Sales Report </strong></li>
+                <li><strong >Login: Admin have to login with their credentials to access system. If the email id or password is wrong, a notification showing “invalid email id or password” will be displayed.</strong></li>
+                <li><strong>Dashboard: The admin can view the total number of users, total profit, total food items available in the canteen, total food items delivered and also, he can view the statistics of order status in bar graph and payment methods of the orders in pie graph</strong></li>
+                <li><strong>Add Food Items: Admin can add food in to the system and varios details related to that food item.</strong></li>
+                <li><strong>Edit / Delete Items: Admin can edit the details of food items and also can delete any food item from the list.</strong></li>
+                <li><strong>Edit / Delete Banner: where admin can edit or delete the banner in the user's home page. </strong></li>
+                <li><strong>View Orders: Admin could directly track any particular order. And also, admin can send an order ready SMS notification after the order is ready and he can also send a delivery confirmation message after the order is complete.</strong></li>
+                <li><strong>View Users: The admin can view the details like name, email id, and status of any users. The status will show the list of all the active and inactive users. </strong></li>
+                <li><strong>Add category: where admin can add new category to the system with category name and image. </strong></li>
+                <li><strong>Edit or Delete Category: The admin can edit the details of the existing food items and also can delete any category. </strong></li>
+                <li><strong>Manage User: where admin can Block or Unblock any user and also the admin can completely delete the details of the existing users. When the admin block any particular user, that user can not login to his account </strong></li>
+                <li><strong>Order Report: The admin can view the history of all orders from a particular period and he can also download this report as csv, pdf or excel files.</strong></li>
               </ul>
             </div>
           </div>
@@ -151,7 +159,7 @@
             </div>
           </div>
         
-        </div> -->
+        </div>
 
 
       </div>
