--- a/explore-keraala-details.html
+++ b/explore-keraala-details.html
@@ -79,7 +79,7 @@
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
-              <p>
+              <p style=text-align:justify;>
                 EXPLORE KERALA is a dynamic Web application where user can write blogs based on the places visited on Kerala. It also Provides login authentication with phone number where OTP verification has been send as phone call or text SMS. This Project was established using Hbs(Handlebars), Node.js, Express.js and MongoDB.
               </p>
             </div>
@@ -102,7 +102,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12" style=text-align:justify;>
             <div class="portfolio-info">
               <h3>Features on user side</h3>
               <ul style="list-style-type:circle">
@@ -118,7 +118,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12 " style=text-align:justify;>
             <div class="portfolio-info">
               <h3>Features on admin side</h3>
               <ul style="list-style-type:circle">
