--- a/adonsworld-details.html
+++ b/adonsworld-details.html
@@ -82,7 +82,7 @@
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
-              <p>
+              <p style=text-align:justify;>
                 ADON'S WORLD is a Dynamic Ecommerce Web application established using Hbs(Handlebars),Node.js, Express.js ,MongoDB, and it also deals with razorpay test mode payment gateway integration.
               </p>
             </div>
@@ -119,7 +119,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12" >
             <div class="portfolio-info">
               <h3>Features on admin side</h3>
               <ul style="list-style-type:circle">
