project tittle updated

--- a/canteen-details.html
+++ b/canteen-details.html
@@ -75,7 +75,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>ADON'S WORLD</h3>
+              <h3> CANTEEN </h3>
               <ul>
                 <li><strong>Category</strong>:  Food Ordering</li>
                 <li><strong>Project link for user</strong>: <a href="https://adoncanteen.herokuapp.com/"  target="_blank">https://adoncanteen.herokuapp.com/</a></li>
