--- a/explore-keraala-details.html
+++ b/explore-keraala-details.html
@@ -69,7 +69,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>ADON'S WORLD</h3>
+              <h3>EXPLORE  KERALA</h3>
               <ul>
                 <li><strong>Category</strong>:  Blog</li>
                 <li><strong>Project link for user</strong>: <a href=" https://explorekerala.herokuapp.com/"  target="_blank">  https://explorekerala.herokuapp.com/</a></li>
