--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is ADON BIJU. I am 4th Year Undergraduate BE Student from AJIET Mangalore.</p>
+          <p>My name is ADON BIJU. I am a self-taught Full Stack Developer. I have strong technical skills particularly in React, Node.js, Express.js, MongoDB.</p>
         </div>
 
         <div class="row">
@@ -222,7 +222,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>ADON BIJU</h4>
-              <p><em>I am 4th Year Undergraduate BE Student from AJIET Mangalore. Hardworking individual eager to learn more about Software Industry. A dedicated
+              <p><em>I am a self-taught Full Stack Developer. I have strong technical skills particularly in React, Node.js, Express.js, MongoDB. Hardworking individual eager to learn more about Software Industry. A dedicated
                 individual with excellent communication skills whose passionate about implementing and launching new
                 projects.</em></p>
               <ul>
