project section updated

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <br>
-            <h3>Web Developer</h3><br>
+            <h3>Full Stack Developer</h3><br>
             <!-- <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -111,8 +111,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Engineering</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Alternate Phone Number:</strong> <span>+91 62827 31370</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Alternate Email Id:</strong> <span>adonbiju007@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone Number:</strong> <span>+91 62827 31370</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email Id:</strong> <span>adonbiju007@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -319,15 +319,17 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <!-- <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li> -->
-              <li data-filter=".filter-web">Web Application</li>
+              <li data-filter=".filter-web">Web Applications</li>
+              <li data-filter=".filter-react">React</li>
+              <li data-filter=".filter-app">React Native</li>
+              <li data-filter=".filter-java">Java</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-           
+
+<!-- ===========================WEB APPLICATION END ============================================================================= -->    
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/Projects/canteen/cover.jpg" class="img-fluid" alt="">
@@ -372,11 +374,76 @@
               </div>
             </div>
           </div>
-
-          
-
+<!-- ===========================WEB APPLICATION============================================================================= -->
 
 
+<!-- ===========================REACT NATIVE============================================================================= -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Projects/pokdex/cover.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>POKDEX</h4>
+                <!-- <p>User Section</p> -->
+                <div class="portfolio-links">
+                  <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                    <a href="https://github.com/adonbiju/pokedex.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+<!-- ===========================REACT NATIVE END============================================================================= -->
+
+
+<!-- ===========================REACT============================================================================= -->
+<div class="col-lg-4 col-md-6 portfolio-item filter-react">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/netflix/cover.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>NETFLIX</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+        <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+          title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+          <a href="https://github.com/adonbiju/netflix-clone-react.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-react">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/mern/cover.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>MERN</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+        <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+          title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+          <a href="https://github.com/adonbiju/MERN.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ===========================REACT END============================================================================= -->
+
+<!-- ===========================JAVA============================================================================= -->
+<div class="col-lg-4 col-md-6 portfolio-item filter-java">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/hms/cover.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>HMS</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+        <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+          title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+          <a href="https://github.com/adonbiju/Hospital-Management-System.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ===========================JAVA END============================================================================= -->
         </div>
 
       </div>
