Url of all the project updated

--- a/canteen-details.html
+++ b/canteen-details.html
@@ -78,8 +78,8 @@
               <h3> CANTEEN </h3>
               <ul>
                 <li><strong>Category</strong>:  Food Ordering</li>
-                <li><strong>Project link for admin</strong>: <a href="https://adoncanteen.herokuapp.com/admin" target="_blank">https://adoncanteen.herokuapp.com/admin</a></li>
-                <li><strong>Project link for user</strong>: <a href="https://adoncanteen.herokuapp.com/"  target="_blank">https://adoncanteen.herokuapp.com/</a></li>
+                <li><strong>Project link for admin</strong>: <a href="https://adoncanteen.onrender.com/admin" target="_blank">https://adoncanteen.onrender.com/admin</a></li>
+                <li><strong>Project link for user</strong>: <a href="https://adoncanteen.onrender.com/"  target="_blank">https://adoncanteen.onrender.com</a></li>
                 <li><strong>Github Repository</strong>: <a href="https://github.com/adonbiju/canteen.git"  target="_blank">https://github.com/adonbiju/canteen.git</a></li>
               </ul>
             </div>
