--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-<!-- ===========================WEB APPLICATION END ============================================================================= -->    
+<!-- ===========================WEB APPLICATION  ============================================================================= -->    
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/Projects/canteen/cover.jpg" class="img-fluid" alt="">
@@ -376,7 +376,7 @@
               </div>
             </div>
           </div>
-<!-- ===========================WEB APPLICATION============================================================================= -->
+<!-- ===========================WEB APPLICATION END============================================================================= -->
 
 
 <!-- ===========================REACT NATIVE============================================================================= -->
