resume section link has been updated

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
              
                <li>
                 <p><em>
-                  Github Repository : <a href="https://github.com/adonbiju/adonsworld.git"  target="_blank">https://github.com/adonbiju/adonsworld.git</a>.</em></p>
+                  Github Repository : <a href="https://github.com/adonbiju/canteen.git"  target="_blank">https://github.com/adonbiju/canteen.git</a>.</em></p>
               </li>
              </ul>
             </div>
@@ -295,7 +295,7 @@
               </li>
               <li>
                   <p><em>
-                    Github Repository : <a href="https://github.com/adonbiju/adonsworld.git"  target="_blank">https://github.com/adonbiju/adonsworld.git</a>.</em></p>
+                    Github Repository : <a href="https://github.com/adonbiju/explore-kerala.git"  target="_blank">https://github.com/adonbiju/explore-kerala.git</a>.</em></p>
               </li>
             </ul>
             </div>
