added chatGPT project in the project section

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
               <li data-filter=".filter-react">React</li>
               <li data-filter=".filter-app">React Native</li>
               <li data-filter=".filter-java">Java</li>
+              <li data-filter=".filter-openai">OpenAI</li>
             </ul>
           </div>
         </div>
@@ -430,6 +431,22 @@
 </div>
 <!-- ===========================REACT END============================================================================= -->
 
+<!-- ===========================OpenAI============================================================================= -->
+<div class="col-lg-4 col-md-6 portfolio-item filter-openai">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/chatgpt/chatgpt.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>ChatGPT</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+        <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+          title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+          <a href="https://github.com/adonbiju/chatGPT.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ===========================OpenAi============================================================================= -->
 <!-- ===========================JAVA============================================================================= -->
 <div class="col-lg-4 col-md-6 portfolio-item filter-java">
   <div class="portfolio-wrap">
