--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Web Applications</li>
+              <li data-filter=".filter-web">Web Applications(Node.JS)</li>
               <li data-filter=".filter-react">React</li>
               <li data-filter=".filter-app">React Native</li>
               <li data-filter=".filter-java">Java</li>
