gpt3 and resturant UI designs are added in the project section.

--- a/index.html
+++ b/index.html
@@ -321,19 +321,20 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Web Applications(Node.JS)</li>
+              <li data-filter=".filter-web-NodeJS">Web Applications(Node.JS)</li>
               <li data-filter=".filter-react">React</li>
-              <li data-filter=".filter-app">React Native</li>
-              <li data-filter=".filter-java">Java</li>
+              <li data-filter=".filter-mern">MERN</li>
+              <li data-filter=".filter-react-native">React Native</li>
               <li data-filter=".filter-openai">OpenAI</li>
+              <li data-filter=".filter-java">Java</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-<!-- ===========================WEB APPLICATION  ============================================================================= -->    
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+<!-- ===========================WEB APPLICATION NodeJS ============================================================================= -->    
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web-NodeJS">
             <div class="portfolio-wrap">
               <img src="assets/img/Projects/canteen/cover.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -348,7 +349,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web-NodeJS">
             <div class="portfolio-wrap">
               <img src="assets/img/Projects/explore-kerala/cover.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -363,7 +364,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web-NodeJS">
             <div class="portfolio-wrap">
               <img src="assets/img/Projects/adons-world/cover.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -377,27 +378,7 @@
               </div>
             </div>
           </div>
-<!-- ===========================WEB APPLICATION END============================================================================= -->
-
-
-<!-- ===========================REACT NATIVE============================================================================= -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/Projects/pokdex/cover.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>POKDEX</h4>
-                <!-- <p>User Section</p> -->
-                <div class="portfolio-links">
-                  <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                    <a href="https://github.com/adonbiju/pokedex.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-<!-- ===========================REACT NATIVE END============================================================================= -->
-
+<!-- ===========================WEB APPLICATION NodeJS END============================================================================= -->
 
 <!-- ===========================REACT============================================================================= -->
 <div class="col-lg-4 col-md-6 portfolio-item filter-react">
@@ -417,6 +398,34 @@
 
 <div class="col-lg-4 col-md-6 portfolio-item filter-react">
   <div class="portfolio-wrap">
+    <img src="assets/img/Projects/React_UI_Desgns/gpt3.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>GPT3 UI</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+          <a href="https://github.com/adonbiju/React-UI-Designs/tree/master/gpt3_ui_design" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-react">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/React_UI_Desgns/resturant.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>Resturant UI</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+          <a href="https://github.com/adonbiju/React-UI-Designs/tree/master/resturant_ui_design_vite_react" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ===========================REACT END============================================================================= -->
+
+<!-- ===========================MERN============================================================================= -->
+<div class="col-lg-4 col-md-6 portfolio-item filter-mern">
+  <div class="portfolio-wrap">
     <img src="assets/img/Projects/mern/cover.jpg" class="img-fluid" alt="">
     <div class="portfolio-info">
       <h4>MERN</h4>
@@ -429,7 +438,25 @@
     </div>
   </div>
 </div>
-<!-- ===========================REACT END============================================================================= -->
+<!-- ===========================MERN END============================================================================= -->
+
+<!-- ===========================REACT NATIVE============================================================================= -->
+<div class="col-lg-4 col-md-6 portfolio-item filter-react-native">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/pokdex/cover.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>POKDEX</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+        <!-- <a href=" https://adonsworld.herokuapp.com/" data-vbtype="iframe" class="venobox"
+          title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+          <a href="https://github.com/adonbiju/pokedex.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ===========================REACT NATIVE END============================================================================= -->
 
 <!-- ===========================OpenAI============================================================================= -->
 <div class="col-lg-4 col-md-6 portfolio-item filter-openai">
@@ -446,7 +473,8 @@
     </div>
   </div>
 </div>
-<!-- ===========================OpenAi============================================================================= -->
+<!-- ===========================OpenAI END============================================================================= -->
+
 <!-- ===========================JAVA============================================================================= -->
 <div class="col-lg-4 col-md-6 portfolio-item filter-java">
   <div class="portfolio-wrap">
