In Project section, Social Media Project added.

--- a/index.html
+++ b/index.html
@@ -426,6 +426,19 @@
 <!-- ===========================MERN============================================================================= -->
 <div class="col-lg-4 col-md-6 portfolio-item filter-mern">
   <div class="portfolio-wrap">
+    <img src="assets/img/Projects/social_media/social_media.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>Social Media(still in progress)</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+          <a href="https://github.com/adonbiju/socialMedia.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-mern">
+  <div class="portfolio-wrap">
     <img src="assets/img/Projects/mern/cover.jpg" class="img-fluid" alt="">
     <div class="portfolio-info">
       <h4>MERN</h4>
