In project section, chat app project is added

--- a/index.html
+++ b/index.html
@@ -428,10 +428,23 @@
   <div class="portfolio-wrap">
     <img src="assets/img/Projects/social_media/social_media.jpg" class="img-fluid" alt="">
     <div class="portfolio-info">
-      <h4>Social Media(still in progress)</h4>
+      <h4>Social Media</h4>
       <!-- <p>User Section</p> -->
       <div class="portfolio-links">
           <a href="https://github.com/adonbiju/socialMedia.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-mern">
+  <div class="portfolio-wrap">
+    <img src="assets/img/Projects/chat-app/chat-app.jpg" class="img-fluid" alt="">
+    <div class="portfolio-info">
+      <h4>Chat App(still in progress)</h4>
+      <!-- <p>User Section</p> -->
+      <div class="portfolio-links">
+          <a href="https://github.com/adonbiju/chat-app-mern.git" class="" target="_blank" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
       </div>
     </div>
   </div>
